[package]
name = "web_worker"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/web_worker"
repository = "https://github.com/jojolepro/web_worker"
categories = ["concurrency", "config", "wasm"]
keywords = ["wasm", "web", "worker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.1"
js-sys = "0.3.24"
rayon = "1.1.0"
rayon-core = "1.5.0"
wasm-bindgen = { version = "0.2.47", features = ['serde-serialize'] }
wasm-bindgen-futures = "0.3.24"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]

[patch.crates-io]
wasm-bindgen = { path = '../wasm-bindgen' }
wasm-bindgen-futures = { path = '../wasm-bindgen/crates/futures' }
js-sys = { path = '../wasm-bindgen/crates/js-sys' }
web-sys = { path = '../wasm-bindgen/crates/web-sys' }
