[package]
name = "web_worker"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/web_worker"
repository = "https://github.com/jojolepro/web_worker"
categories = ["concurrency", "config", "wasm"]
keywords = ["wasm", "web", "worker"]
description = "A simple crate implementing web workers to run rayon-styled concurrent work on wasm."
readme = "README.md"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.1"
js-sys = "0.3.33"
rayon = "1.1.0"
rayon-core = "1.5.0"
wasm-bindgen = { version = "0.2.56", features = ['serde-serialize'] }
wasm-bindgen-futures = "0.4.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]

